--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
-    "hardhat": "^2.8.3"
+    "hardhat": "^2.8.3",
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "dependencies": {
     "dotenv": "^15.0.0"
