Replace static contracts with OZ package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^15.0.0"
   }
 }
