--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
+    "@types/bluebird": "^3.5.36",
     "@types/mocha": "^9.1.0",
+    "bluebird": "^3.7.2",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
