--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@typechain/hardhat": "^4.0.0",
     "@types/bluebird": "^3.5.36",
     "@types/mocha": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "bluebird": "^3.7.2",
     "chai": "^4.3.6",
+    "eslint": "^8.9.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.3",
