--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint-sol": "solhint \"contracts/*.sol\"",
     "lint-ts": "eslint \"./test/**/*.ts\"",
     "lint": "npm run lint-sol && npm run lint-ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -38,7 +39,6 @@
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solhint": "^3.3.7",
     "ts-node": "^10.4.0",
     "typechain": "^7.0.0",
     "typescript": "^4.5.5"
@@ -46,6 +46,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
     "@openzeppelin/contracts-upgradeable": "^4.4.2",
-    "dotenv": "^15.0.0"
+    "dotenv": "^15.0.0",
+    "solhint": "^3.3.7"
   }
 }
