--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/bluebird": "^3.5.36",
+    "@types/lodash": "^4.14.179",
     "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
