--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
     "hardhat": "^2.8.3",
+    "hardhat-gas-reporter": "^1.0.8",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
