Initial migration of the Union's GenericVault.sol to ERC4626

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@openzeppelin/contracts": "^4.4.2",
     "@openzeppelin/contracts-upgradeable": "^4.4.2",
     "@rari-capital/solmate": "github:Rari-Capital/solmate#e7deddf",
+    "bignumber.js": "^9.0.2",
     "dotenv": "^15.0.0",
     "solhint": "^3.3.7"
   }
