--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint-ts": "eslint \"./test/**/*.ts\"",
     "lint": "npm run lint-sol && npm run lint-ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "forge-test": "scripts/forgeTest.sh"
   },
   "repository": {
     "type": "git",
