--- a/foundry.toml
+++ b/foundry.toml
@@ -5,3 +5,4 @@ out = "artifacts"
 remappings = ["contracts/=contracts/"]
 libs = ["lib", "node_modules"]
 verbosity = 2
+fuzz_runs = 1 # Change as needed
